--- a/.config/matugen/templates/kitty.conf
+++ b/.config/matugen/templates/kitty.conf
@@ -7,21 +7,21 @@ cursor                {{ colors.primary.default.hex }}
 cursor_text_color     {{ colors.surface.default.hex }}
 
 # Regular Colors
-color0  {{ colors.surface.default.hex }}
-color1  {{ colors.error.default.hex }}
-color2  {{ colors.primary.default.hex }}
-color3  {{ colors.tertiary.default.hex }}
-color4  {{ colors.on_primary_container.default.hex }}
-color5  {{ colors.on_secondary_container.default.hex }}
-color6  {{ colors.secondary.default.hex }}
-color7  {{ colors.on_surface.default.hex }}
+color0  #003b42
+color1  #e34e1c
+color2  #00b368
+color3  #f49725
+color4  #0094f0
+color5  #ff5792
+color6  #00bdd6
+color7  #8ca6a6
 
 # Bright Colors
-color8  {{ colors.surface_bright.default.hex }}
-color9  {{ colors.error.default.hex }}
-color10 {{ colors.primary.default.hex }}
-color11 {{ colors.tertiary.default.hex }}
-color12 {{ colors.on_primary_container.default.hex }}
-color13 {{ colors.on_secondary_container.default.hex }} 
-color14 {{ colors.secondary.default.hex }}
-color15 {{ colors.on_surface.default.hex }}
+color8  #004d57
+color9  #ff4000
+color10 #00d17a
+color11 #ff8c00
+color12 #0fa3ff
+color13 #ff6b9f
+color14 #00cbe6
+color15 #bbc3c4
