--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -2,8 +2,11 @@ font_family      family='CaskaydiaCove Nerd Font' postscript_name=CaskaydiaCoveN
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
+font_size 10
 
 window_margin_width 2
 confirm_os_window_close 0
 background_opacity 0.75
 include colors.conf
+
+touch_scroll_multiplier 5.0
