add pacman updates module

--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -18,6 +18,7 @@
         "custom/music"
     ],
     "modules-right": [
+        "custom/updates",
         "group/system",
         "custom/notifications"
     ],
