--- a/.config/waybar/modules.jsonc
+++ b/.config/waybar/modules.jsonc
@@ -69,21 +69,26 @@
         "on-click-right": "playerctl -p spotify next",
         "markup": "pango"
     },
+    "custom/updates": {
+        "format": "  {text}",
+        "return-type": "json",
+        "exec-if": "which waybar-module-pacman-updates",
+        "exec": "waybar-module-pacman-updates --interval-seconds 1800 --network-interval-seconds 3600 --no-zero-output --color-semver-updates",
+        "on-click": "kitty -e sh -c 'pikaur -Syu; echo Done - Press Enter to exit; read'",
+    },
     "pulseaudio": {
         "format": "{icon} ",
         "format-bluetooth": "{icon} ",
-        "format-muted": "",
+        "format-muted": "",
         "format-icons": {
-            "alsa_output.pci-0000_00_1f.3.analog-stereo": "",
-            "alsa_output.pci-0000_00_1f.3.analog-stereo-muted": "",
             "headphone": "",
             "headset": "",
             "default": [
+                "",
                 "",
                 ""
             ]
         },
-        "scroll-step": 1,
         "on-click": "pavucontrol",
         "ignored-sinks": [
             "Easy Effects Sink"
@@ -92,12 +97,12 @@
     "network": {
         "format": "{ifname}",
         "format-wifi": "{icon} ",
-        "format-ethernet": "󰌘",
-        "format-disconnected": "󰌙",
+        "format-ethernet": "󰌘 ",
+        "format-disconnected": "󰌙 ",
         "tooltip-format": "{ipaddr}  {bandwidthUpBits}  {bandwidthDownBits}",
         "format-linked": "󰈁 {ifname} (No IP)",
-        "tooltip-format-wifi": "{essid} {icon} {signalStrength}%",
-        "tooltip-format-ethernet": "{ifname} 󰌘",
+        "tooltip-format-wifi": "{essid} {icon} {signalStrength}%\n{ipaddr}",
+        "tooltip-format-ethernet": "{ifname} 󰌘\n{ipaddr}",
         "tooltip-format-disconnected": "󰌙 Disconnected",
         "max-length": 30,
         "format-icons": [
@@ -117,13 +122,19 @@
         },
         "format": "{icon} {capacity}%",
         "format-icons": [
-            "",
-            "",
-            "",
-            "",
-            ""
+            "󰂎",
+            "󰁺",
+            "󰁻",
+            "󰁼",
+            "󰁽",
+            "󰁾",
+            "󰁿",
+            "󰂀",
+            "󰂁",
+            "󰂂",
+            "󰁹"
         ],
         "format-charging": " {capacity}%",
-        "format-plugged": " {capacity}%"
+        "format-plugged": " {capacity}%"
     }
 }
