change scroll factor

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -23,8 +23,7 @@ source = colors.conf
 ################
 
 # See https://wiki.hypr.land/Configuring/Monitors/
-monitor=eDP-1,2880x1800@120,auto,auto,bitdepth,10,cm,dcip3
-
+monitor =eDP-1,2880x1800@120,auto,2,bitdepth,10,cm,dp3
 
 
 ###################
@@ -49,7 +48,6 @@ $menu = rofi
 # exec-once = $terminal
 # exec-once = nm-applet &
 # exec-once = waybar & hyprpaper & firefox
-exec-once = uwsm app -- blueman-applet
 
 
 
@@ -84,12 +82,13 @@ exec-once = uwsm app -- blueman-applet
 ### LOOK AND FEEL ###
 #####################
 
+
 # Refer to https://wiki.hypr.land/Configuring/Variables/
 
 # https://wiki.hypr.land/Configuring/Variables/#general
 general {
-    gaps_in = 5
-    gaps_out = 15
+    gaps_in = 3
+    gaps_out = 10
 
     border_size = 1
 
@@ -98,7 +97,7 @@ general {
     col.inactive_border = rgba(595959aa)
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
-    resize_on_border = false
+    resize_on_border = true
 
     # Please see https://wiki.hypr.land/Configuring/Tearing/ before you turn this on
     allow_tearing = false
@@ -134,7 +133,7 @@ decoration {
 
 # https://wiki.hypr.land/Configuring/Variables/#animations
 animations {
-    enabled = yes, please :)
+    enabled = yes
 
     # Default curves, see https://wiki.hypr.land/Configuring/Animations/#curves
     #        NAME,           X0,   Y0,   X1,   Y1
@@ -188,6 +187,10 @@ animations {
 #     rounding = 0
 # }
 
+waybar {
+    
+}
+
 # See https://wiki.hypr.land/Configuring/Dwindle-Layout/ for more
 dwindle {
     pseudotile = true # Master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
@@ -201,8 +204,8 @@ master {
 
 # https://wiki.hypr.land/Configuring/Variables/#misc
 misc {
-    force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
-    disable_hyprland_logo = false # If true disables the random hyprland logo / anime girl background. :(
+    force_default_wallpaper = 0 # Set to 0 or 1 to disable the anime mascot wallpapers
+    disable_hyprland_logo = true # If true disables the random hyprland logo / anime girl background. :(
 }
 
 
@@ -226,7 +229,7 @@ input {
 
     touchpad {
         natural_scroll = true
-        scroll_factor = 0.5
+        scroll_factor = 0.25
         tap-to-click = false
         clickfinger_behavior = true
     }
@@ -308,8 +311,8 @@ bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@
 bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
 bindel = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
-bindel = ,XF86MonBrightnessUp, exec, brightnessctl -e4 -n2 set 5%+
-bindel = ,XF86MonBrightnessDown, exec, brightnessctl -e4 -n2 set 5%-
+bindel = ,XF86MonBrightnessUp, exec, brightnessctl set 10%+
+bindel = ,XF86MonBrightnessDown, exec, brightnessctl set 10%-
 
 # Requires playerctl
 bindl = , XF86AudioNext, exec, playerctl next
@@ -356,4 +359,5 @@ windowrule {
     move = 20 monitor_h-120
     float = yes
 }
+
 
