change hyprlock style

--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -1,95 +1,154 @@
-# sample hyprlock.conf
-# for more configuration options, refer https://wiki.hyprland.org/Hypr-Ecosystem/hyprlock
-#
-# rendered text in all widgets supports pango markup (e.g. <b> or <i> tags)
-# ref. https://wiki.hyprland.org/Hypr-Ecosystem/hyprlock/#general-remarks
-#
-# shortcuts to clear password buffer: ESC, Ctrl+U, Ctrl+Backspace
-#
-# you can get started by copying this config to ~/.config/hypr/hyprlock.conf
-#
-
-$font = Monospace
+source = colors.conf
+$Scripts = $HOME/.config/hypr/scripts
 
 general {
-    hide_cursor = true
+    grace = 1
+    fractional_scaling = 2
+    immediate_render = true
 }
 
-# uncomment to enable fingerprint authentication
+background {
+    monitor =
+    #path = screenshot
+    #path = $HOME/.config/hypr/wallpaper_effects/.wallpaper_modified
+    path = ~/.config/hypr/current_wallpaper
+    
+    color = rgb(0,0,0)
+
+    blur_size = 3
+    blur_passes = 2
+    noise = 0.0117
+    contrast = 1.3000
+    brightness = 0.6000
+    vibrancy = 0.2100
+    vibrancy_darkness = 0.0
+}
+
+# Hours
+label {
+    monitor =
+    text = cmd[update:1000] echo "<b><big> $(date +"%H") </big></b>"
+    color = $on_secondary_container
+    # Scaled 112 * 1.67 = ~187
+    font_size = 187
+    font_family = Adwaita Sans
+    shadow_passes = 0
+    shadow_size = 0
+
+    # Scaled 220 * 1.67 = ~367
+    position = 0, 367
+    halign = center
+    valign = center
+}
+
+# Minutes
+label {
+    monitor =
+    text = cmd[update:1000] echo "<b><big> $(date +"%M") </big></b>"
+    color = $on_secondary_container
+    # Scaled 112 * 1.67 = ~187
+    font_size = 187
+    font_family = Adwaita Sans
+    shadow_passes = 0
+    shadow_size = 0
+
+    # Scaled 80 * 1.67 = ~134
+    position = 0, 134
+    halign = center
+    valign = center
+}
+
+# Today
+label {
+    monitor =
+    text = cmd[update:18000000] echo "<b><big> "$(date +'%A')" </big></b>"
+    color = $secondary
+    # Scaled 18 * 1.67 = ~30
+    font_size = 30
+    font_family = JetBrainsMono NFM
+
+    # Scaled -15 * 1.67 = -25
+    position = 0, -25
+    halign = center
+    valign = center
+}
+
+# Week
+label {
+    monitor =
+    text = cmd[update:18000000] echo "<b> "$(date +'%d %b')" </b>"
+    color = $secondary
+    # Scaled 14 * 1.67 = ~23
+    font_size = 23
+    font_family = JetBrainsMono Nerd Font 10
+
+    # Scaled -40 * 1.67 = -67
+    position = 0, -67
+    halign = center
+    valign = center
+}
+
+# Degrees
+#label {
+    monitor =
+    text = cmd[update:18000000] echo "<b>Feels like<big> $(curl -s 'wttr.in?format=%t' | tr -d '+') </big></b>"
+    color = $color8
+    # Scaled 14 * 1.67 = ~23
+    font_size = 23
+    font_family = JetBrainsMono NFM
+
+    # Scaled 40 * 1.67 = ~67
+    position = 0, 67
+    halign = center
+    valign = bottom
+}
+
+# USER
+#label {
+    monitor =
+    text = $USER
+    color = $color8
+    # Scaled 14 * 1.67 = ~23
+    font_size = 23
+    font_family = JetBrainsMono NFM Bold
+    
+    # Scaled 200 * 1.67 = ~334
+    position = 0, 334
+    halign = center
+    valign = bottom
+}
+
+input-field {
+    monitor =
+    # Scaled 250,50 * 1.67 = ~418, 84
+    size = 418, 84
+    # Scaled 3 * 1.67 = 5
+    outline_thickness = 5
+
+    dots_size = 0.26
+    dots_spacing = 0.64
+    dots_center = true
+    dots_rouding = -1
+
+    # Scaled 22 * 1.67 = ~37
+    rounding = 37
+    outer_color = $source_color
+    inner_color = rgba(255, 255, 255, 0.1)
+    font_color = $secondary
+    fade_on_empty = true
+    placeholder_text = <i>Password...</i>
+
+    # Scaled 120 * 1.67 = ~200
+    position = 0, 200
+    halign = center
+    valign = bottom
+}
+
 auth {
     fingerprint {
         enabled = true
         ready_message = Scan fingerprint to unlock
         present_message = Scanning...
-        retry_delay = 250 # in milliseconds
+        retry_delay = 250
     }
-}
-
-animations {
-    enabled = true
-    bezier = linear, 1, 1, 0, 0
-    animation = fadeIn, 1, 5, linear
-    animation = fadeOut, 1, 5, linear
-    animation = inputFieldDots, 1, 2, linear
-}
-
-background {
-    monitor =
-    path = screenshot
-    blur_passes = 3
-}
-
-input-field {
-    monitor =
-    size = 20%, 5%
-    outline_thickness = 3
-    inner_color = rgba(0, 0, 0, 0.0) # no fill
-
-    outer_color = rgba(33ccffee) rgba(00ff99ee) 45deg
-    check_color = rgba(00ff99ee) rgba(ff6633ee) 120deg
-    fail_color = rgba(ff6633ee) rgba(ff0066ee) 40deg
-
-    font_color = rgb(143, 143, 143)
-    fade_on_empty = false
-    rounding = 15
-
-    font_family = $font
-    placeholder_text = Input password...
-    fail_text = $PAMFAIL
-
-    # uncomment to use a letter instead of a dot to indicate the typed password
-    # dots_text_format = *
-    # dots_size = 0.4
-    dots_spacing = 0.3
-
-    # uncomment to use an input indicator that does not show the password length (similar to swaylock's input indicator)
-    # hide_input = true
-
-    position = 0, -20
-    halign = center
-    valign = center
-}
-
-# TIME
-label {
-    monitor =
-    text = $TIME # ref. https://wiki.hyprland.org/Hypr-Ecosystem/hyprlock/#variable-substitution
-    font_size = 90
-    font_family = $font
-
-    position = -30, 0
-    halign = center
-    valign = top
-}
-
-# DATE
-label {
-    monitor =
-    text = cmd[update:60000] date +"%A, %d %B %Y" # update every 60 seconds
-    font_size = 25
-    font_family = $font
-
-    position = -30, -150
-    halign = center
-    valign = top
 }
