--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -10,3 +10,8 @@ background_opacity 0.75
 include colors.conf
 
 touch_scroll_multiplier 5.0
+
+cursor_blink_interval 0
+repaint_delay 10
+input_delay 3
+sync_to_monitor yes
