add rofi rbw keybind

--- a/.config/hypr/modules/keybinds.conf
+++ b/.config/hypr/modules/keybinds.conf
@@ -16,6 +16,8 @@ bind = $mainMod, R, exec, uwsm app -- $menu -show drun
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, L, exec, uwsm app -- hyprlock
+bind = $mainMod, O, exec, hyprctl dispatch dpms on
+bind = $mainMod SHIFT, SPACE, exec, rofi-rbw
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
