--- a/.config/hypr/modules/monitors.conf
+++ b/.config/hypr/modules/monitors.conf
@@ -16,3 +16,8 @@ monitor = eDP-1,2880x1800@120,auto,1.879,bitdepth,10,cm,dp3
 $terminal = kitty
 $fileManager = dolphin
 $menu = rofi
+
+
+xwayland {
+  force_zero_scaling = true
+}
